--- a/assets/sass/helpers/_variables.scss
+++ b/assets/sass/helpers/_variables.scss
@@ -13,4 +13,4 @@ $white: #F0F0F0;
 // $brand-secondary: ;
 
 // Breakpoints
-$breakpoint-medium: 750px;
+$breakpoint-medium: 650px;
